--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "mu-jquery-app-hub",
+  "name": "mu-jquery-widget-hub",
   "authors": [
     "Mikael Karon <mikael@karon.se>"
   ],
@@ -16,7 +16,8 @@
   ],
   "dependencies": {
     "jquery": "^3.0.0",
-    "mu-jquery-app": "^10.0.0",
+    "mu-create": "^5.0.1",
+    "mu-jquery-widget": "^11.0.0",
     "mu-jquery-hub": "^1.1.5"
   }
 }
