feat: refactor and rename package
Renamed package back to `mu-jquery-app-hub` as you should really only need the hub unless in an app setting.

BREAKING CHANGE: Package renamed again

--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
-  "name": "mu-jquery-widget-hub",
+  "name": "mu-jquery-app-hub",
   "authors": [
     "Mikael Karon <mikael@karon.se>"
   ],
-  "description": "Micro jQuery Application hub facet",
+  "description": "Micro jQuery application hub facet",
   "main": "",
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://github.com/mu-lib/mu-jquery-app-hub#readme",
   "ignore": [
     "**/.*",
     "node_modules",
