--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,7 @@
   ],
   "dependencies": {
     "jquery": "^3.0.0",
-    "mu-create": "^5.0.1",
-    "mu-jquery-widget": "^11.0.0",
+    "mu-jquery-app": "^11.0.0",
     "mu-jquery-hub": "^1.1.5"
   }
 }
