--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Micro jQuery application hub facet",
   "main": "",
   "scripts": {
-    "release": "standard-version"
+    "release": "standard-version",
+    "build": "gulp"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,8 @@
     "mu-jquery-app": "^11.0.0"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "standard-version": "^2.4.0"
   },
   "peerDependencies": {
